public interface Sale {
    void viewSaleDetails();
    void calculateDiscount();
    void recordInvoice();
}
